首頁手機板完成

--- a/pages/index.html
+++ b/pages/index.html
@@ -349,27 +349,27 @@
         </div>
       </div>
       <div class="explore-ad">
-        <div class="container explore-ad-text py-82">
-          <p class="heading-xxxlarge mb-20 text-grey-0">找尋</p>
+        <div class="container explore-ad-text py-64 py-md-82">
+          <p class="heading-xxxlarge mb-8 mb-md-20 text-grey-0">找尋</p>
           <p class="heading-xxxlarge mb-20 text-grey-0">屬於我的咖啡風味</p>
           <div class="horizontal-line3"></div>
           <p class="paragraph-xlarge text-grey-0 my-20 ls-2">風味太多選不出來？我們將會帶領您探索屬於您的風味咖啡</p>
           <a href="explore.html" class="btn2 paragraph-medium ls-2 d-inline-block">探索去</a>
         </div>
       </div>
-      <div class="py-120">
+      <div class="py-md-120 py-40">
         <div class="text-center">
           <p class="heading-small ls-2 text-accent-300 mb-12">FEEDBACK</p>
-          <p class="heading-xxlarge ls-2 text-primary-950 mb-64">顧客好評</p>
+          <p class="heading-xxlarge ls-2 text-primary-950 mb-24 mb-md-64">顧客好評</p>
           <div class="box">
             <div class="list">
               <div class="feedback">
-                <div class="p-32">
-                  <div class="d-flex align-items-center mb-12">
+                <div class="p-20 p-md-32">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <img class="me-12" src="/images/index/feedback/Bella.png" alt="YUI">
                     <p class="label-medium ls-2 text-primary-950 mb-0">YUI</p>
                   </div>
-                  <div class="d-flex align-items-center mb-12">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
@@ -382,12 +382,12 @@
                 </div>
               </div>
               <div class="feedback">
-                <div class="p-32">
-                  <div class="d-flex align-items-center mb-12">
+                <div class="p-20 p-md-32">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <img class="me-12" src="/images/index/feedback/Andy.png" alt="Marco">
                     <p class="label-medium ls-2 text-primary-950 mb-0">Marco</p>
                   </div>
-                  <div class="d-flex align-items-center mb-12">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.5</p>
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
@@ -400,12 +400,12 @@
                 </div>
               </div>
               <div class="feedback">
-                <div class="p-32">
-                  <div class="d-flex align-items-center mb-12">
+                <div class="p-20 p-md-32">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <img class="me-12" src="/images/index/feedback/Charlie.png" alt="Sherry">
                     <p class="label-medium ls-2 text-primary-950 mb-0">Sherry</p>
                   </div>
-                  <div class="d-flex align-items-center mb-12">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.8</p>
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
@@ -418,12 +418,12 @@
                 </div>
               </div>
               <div class="feedback">
-                <div class="p-32">
-                  <div class="d-flex align-items-center mb-12">
+                <div class="p-20 p-md-32">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <img class="me-12" src="/images/index/feedback/man2.png" alt="Barret">
                     <p class="label-medium ls-2 text-primary-950 mb-0">Barret</p>
                   </div>
-                  <div class="d-flex align-items-center mb-12">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.0</p>
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
@@ -440,12 +440,12 @@
                 </div>
               </div>
               <div class="feedback">
-                <div class="p-32">
-                  <div class="d-flex align-items-center mb-12">
+                <div class="p-20 p-md-32">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <img class="me-12" src="/images/index/feedback/Ethan.png" alt="awei">
                     <p class="label-medium ls-2 text-primary-950 mb-0">awei</p>
                   </div>
-                  <div class="d-flex align-items-center mb-12">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.7</p>
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
@@ -458,12 +458,12 @@
                 </div>
               </div>
               <div class="feedback">
-                <div class="p-32">
-                  <div class="d-flex align-items-center mb-12">
+                <div class="p-20 p-md-32">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <img class="me-12" src="/images/index/feedback/man.png" alt="Hsun">
                     <p class="label-medium ls-2 text-primary-950 mb-0">Hsun</p>
                   </div>
-                  <div class="d-flex align-items-center mb-12">
+                  <div class="d-flex align-items-center mb-8 mb-md-12">
                     <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
                     <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
