--- a/pages/products.html
+++ b/pages/products.html
@@ -11,6 +11,46 @@
 
 <body class="products-bg">
   <%- include('./layout/header'); -%>
+
+  <!-- <div class="nav-test">
+    <nav class="test-navbar">
+      <input type="checkbox" id="menu-toggle" class="menu-toggle"/>
+      
+      <div class="nav-top container-xl"> -->
+      <!-- 左：漢堡或導覽列 -->
+        <!-- <div class="nav-left">
+          <label for="menu-toggle" class="hamburger">
+            <i class="fas fa-bars"><svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M2.75 18h12.5a.75.75 0 0 1 .102 1.493l-.102.007H2.75a.75.75 0 0 1-.102-1.494L2.75 18h12.5-12.5Zm0-6.5h18.5a.75.75 0 0 1 .102 1.493L21.25 13H2.75a.75.75 0 0 1-.102-1.493l.102-.007h18.5-18.5Zm0-6.497h15.5a.75.75 0 0 1 .102 1.493l-.102.007H2.75a.75.75 0 0 1-.102-1.493l.102-.007h15.5-15.5Z" fill="#fff"/></svg></i>
+          </label>
+
+          <ul class="nav-links">
+            <li class="test-breadcrumb"><a href="#">關於羊蹄</a></li>
+            <li class="test-breadcrumb"><a href="#">線上商店</a></li>
+            <li class="test-breadcrumb"><a href="#">探索風味</a></li>
+          </ul>
+        </div> -->
+
+        <!-- 中：LOGO -->
+        <!-- <div class="nav-logo">
+          <a href="#">LOGO</a>
+        </div> -->
+
+        <!-- 右：icons -->
+        <!-- <div class="nav-icons">
+          <a href="#"><img src="/images/header/ic_Shopping_Cart.svg" class="fas fa-shopping-cart"></img></a>
+          <a href="#"><img src="/images//header/ic_User.svg" class="fas fa-user"></img></a>
+        </div>
+      </div> -->
+
+      <!-- 手機展開的選單 -->
+      <!-- <ul class="mobile-menu">
+        <li><a href="#">關於羊蹄 ></a></li>
+        <li><a href="#">線上商店 ></a></li>
+        <li><a href="#">探索風味 ></a></li>
+      </ul>
+    </nav>
+  </div> -->
+  
       <!-- 輪播 -->
       <div class="products">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -54,7 +94,10 @@
         <div class="col-md-9">
           <ul class="nav nav-underline d-flex flex-row flex-nowrap overflow-x-auto">
             <li class="nav-item">
-              <a class="products-nav-link nav-link paragraph-medium active text-center py-20 px-md-16" aria-current="page" href="#">全部商品</a>
+              <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" aria-current="page" href="#">
+                <!-- <a class="active disabled"></a> -->
+                全部商品
+              </a>
             </li>
             <li class="nav-item">
               <a class="products-nav-link nav-link paragraph-medium text-center py-20 px-md-16" href="#">非洲產區</a>
