--- a/pages/index.html
+++ b/pages/index.html
@@ -56,8 +56,8 @@
         <div class="row d-flex align-items-end">
           <div class="vh-80 col-12 col-md-7 col-lg-4 d-flex flex-column justify-content-between">
             <div class="top">
-              <p class="heading-xxxlarge text-primary-950 mb-8 mb-md-12 mb-lg-20">中秋節</p>
-              <p class="heading-xxxlarge text-primary-950 mb-12 mb-md-32 mb-lg-48">限定濾掛禮盒</p>
+              <p class="moon-title text-primary-950 mb-8 mb-md-12 mb-lg-20">中秋節</p>
+              <p class="moon-title text-primary-950 mb-12 mb-md-32 mb-lg-48">限定濾掛禮盒</p>
               <div class="d-flex align-items-center mb-12 mb-md-0">
                 <p class="label-large font-weight-bold ls-2 me-20 mb-0">Moon Festival Special</p>
                 <div class="horizontal-line"></div>
