--- a/pages/index.html
+++ b/pages/index.html
@@ -79,8 +79,8 @@
           </div>
           <div class="col-5 col-lg-8">
             <div class="row d-none d-sm-flex align-items-end">
-              <div class="d-none d-lg-block col-4 d-flex flex-row-reverse">
-                <div class="d-flex flex-column">
+              <div class="d-none d-md-block col-4 d-flex end">
+                <div class="d-flex flex-column end">
                   <span class="mb-4 paragraph-small text-primary-950 ls-2">最暖的中秋禮，</span>
                   <span class="mb-4 paragraph-small text-primary-950 ls-2">是一杯為你準備的好咖啡</span>
                   <span class="mb-4 paragraph-small text-primary-950 ls-2">限定濾掛禮盒，</span>
