--- a/pages/about.html
+++ b/pages/about.html
@@ -59,24 +59,27 @@
       <!-- service -->
       <div class="service">
         <div class="container">
-          <div class="text-center mt-md-120 mb-md-80 mt-40 mb-40">
-            <h4 class="  pb-12">Service</h4>
+          <div class="text-center service-title">
+            <h4 class="pb-12">Service</h4>
             <h2 class="">服務項目</h2>
           </div>
 
           <!-- Booking a test -->
-          <div class="row mb-md-80 text-primary-950">
-            <div class="booking-left pe-40 col-md-6">
-              <h3 class="pb-12">
-                預約試喝
-              </h3>
+          <div class="row service-mb80 text-primary-950 align-items-stretch">
+            <div class="booking-left pe-40 col-md-6 order-md-1 order-1">
+              <div class="mb-md-40 mb-20">
+                <h3 class="pb-12">
+                  預約試喝
+                </h3>
+  
+                <div class="d-flex">
+                  <h5 class="">Book a tasting</h5>
+                  <p class="service-horizontal"></p>
+                </div>
 
-              <div class="d-flex mb-md-40 mb-20">
-                <h5 class="">Book a tasting</h5>
-                <p class="service-horizontal"></p>
               </div>
 
-              <div class="paragraph-large mb-40">
+              <div class="order-md-3 order-3">
                 <p>由於工作室內空間有限，目前暫無開放內用服務。</p>
                 <p>
                   若您有咖啡試飲需求，歡迎填寫預約表單，我們將為您保留專屬時段。
@@ -86,7 +89,7 @@
                 <p>讓我們有足夠時間，與您分享每一杯咖啡的風味故事</p>
               </div>
 
-              <div class="btn-ground">
+              <div class="btn-ground order-md-4 order-4">
                 <button
                   type="button"
                   class="btn btn-primary-800 rounded-pill btn-pd">
@@ -95,29 +98,28 @@
               </div>
           </div>
 
-          <div class="booking-right col-md-6">
-            <img src="/images/index/about-2.png" alt="" />
+          <div class="booking-right col-md-6 order-md-2 order-2">
+            <img src="/images/index/about-2.png" alt="" class="img-fluid w-100 object-fit-cover" />
           </div>
 
         </div>
 
-
-
       <div class="container">
           <!-- Business Cooperation -->
-          <div class="row book">
-            <div class="booking-left pe-40 col-md-6">
+          <div class="row align-items-stretch mb-md-120">
+            <div class="booking-left pe-40 mb-md-40 md-40 col-md-6">
               <h3 class="heading-xlarge booking-spacing pb-12">
                 商業合作
               </h3>
-              <div class="d-flex mb-md-40 mb-20">
+
+              <div class="d-flex">
                 <h5 class="label-large">Business Cooperation</h5>
                 <p class="service-horizontal"></p>
               </div>
 
               <div class="paragraph-large text-primary-950 mb-40">
                 <p>工作室提供以下服務：</p><br>
-                <ul>
+                <ul class="pdl-1">
                   <li>代客烘焙、客製化禮盒</li>
                   <li>公司行號&營業用咖啡豆批發</li>
                   <li>不定期舉辦課程、講座、活動</li>
@@ -135,10 +137,12 @@
                   立即預約
                 </button>
               </div>
-          </div>
+          
+          
+            </div>
 
           <div class="booking-right col-md-6">
-            <img src="/images/index/about-1.png" alt="" />
+            <img src="/images/index/about-1.png" alt="" class="img-fluid w-100 object-fit-cover"/>
           </div>
 
           </div>
@@ -148,8 +152,8 @@
 
 
     <!-- FAQ -->
-      <div class="faq">
-        <div class="text-center service-title">
+      <div class="faq ">
+        <div class="text-center faq-title">
           <h3 class="heading-small text-accent-300 pb-12">FAQ</h3>
           <h2 class="heading-xxlarge text-primary-950">常見ＱＡ</h2>
 
