0915 faq title fontsize

--- a/pages/about.html
+++ b/pages/about.html
@@ -154,8 +154,8 @@
     <!-- FAQ -->
       <div class="faq ">
         <div class="text-center faq-title">
-          <h3 class="heading-small text-accent-300 pb-12">FAQ</h3>
-          <h2 class="heading-xxlarge text-primary-950">常見ＱＡ</h2>
+          <h3 class="pb-12">FAQ</h3>
+          <h2 class="">常見 ＱＡ</h2>
 
           
         </div>
