--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,7 @@
       </div>
 
 
-      <!-- service -->
+      <!-- service  RWD圖文順序--> 
       <div class="service">
         <div class="container">
           <div class="text-center service-title">
