--- a/pages/about.html
+++ b/pages/about.html
@@ -107,17 +107,27 @@
       <div class="container">
           <!-- Business Cooperation -->
           <div class="row align-items-stretch mb-md-120">
-            <div class="booking-left pe-40 mb-md-40 md-40 col-md-6">
-              <h3 class="heading-xlarge booking-spacing pb-12">
-                商業合作
-              </h3>
+            <!-- 圖片 -->
+            <div class="booking-right col-md-6 order-md-2 order-2">
+              <img src="/images/index/about-1.png" alt="" class="img-fluid w-100 object-fit-cover"/>
+            </div>
 
-              <div class="d-flex">
-                <h5 class="label-large">Business Cooperation</h5>
-                <p class="service-horizontal"></p>
+            <div class="booking-left pe-40  col-md-6">
+              <!-- 標題 -->
+              <div class="mb-md-40 mb-20 order-md-1 order-1">
+                <h3 class="booking-spacing pb-12">
+                  商業合作
+                </h3>
+  
+                <div class="d-flex">
+                  <h5 class="label-large">Business Cooperation</h5>
+                  <p class="service-horizontal"></p>
+                </div>
+
               </div>
 
-              <div class="paragraph-large text-primary-950 mb-40">
+              <!-- 文字內容 -->
+              <div class="text-primary-950 mb-40 order-md-2 order-3">
                 <p>工作室提供以下服務：</p><br>
                 <ul class="pdl-1">
                   <li>代客烘焙、客製化禮盒</li>
@@ -130,20 +140,15 @@
                 </p>
               </div>
 
-              <div class="btn-ground">
-                <button
-                  type="button"
-                  class="btn btn-primary-800 rounded-pill btn-pd">
-                  立即預約
-                </button>
-              </div>
-          
-          
             </div>
-
-          <div class="booking-right col-md-6">
-            <img src="/images/index/about-1.png" alt="" class="img-fluid w-100 object-fit-cover"/>
-          </div>
+            <!-- 按鈕 -->
+            <div class="btn-ground order-4 order-md-3">
+              <button
+                type="button"
+                class="btn btn-primary-800 rounded-pill btn-pd">
+                立即預約
+              </button>
+            </div>
 
           </div>
 
