--- a/pages/about.html
+++ b/pages/about.html
@@ -66,7 +66,7 @@
 
           <!-- Booking a test -->
           <div class="row mb-40 mb-mt-80 text-primary-950 align-items-stretch">
-            <div class="booking-left pe-40 col-md-6">
+            <div class="booking-left col-md-6">
               <div class="mb-md-40 mb-20">
                 <h3 class="pb-12">
                   預約試喝
