將coffee卡片拉出來

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -244,16 +244,18 @@
             </div>
             <!-- 右邊 -->
             <div class="col-12 col-md-5 x2">
-              <div class="rounded pb-20 position-relative productcard">
-                <div class="hearticon">
-                  <i class="bi bi-heart cicon"></i>
-                  <i class="bi bi-heart-fill cicon d-none"></i>
-                </div>
-                <a href="productdetail.html"> 
+              <a href="productdetail.html"></a>
+              <div class="rounded pb-20 coffeecard">
+                <div>
+                  <div class="hearticon">
+                    <i class="bi bi-heart cicon"></i>
+                    <i class="bi bi-heart-fill cicon d-none"></i>
+                  </div>
                   <img class="coffee-img rounded" src="/images/explore/explore-coffee-1.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
-                  <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
-                  <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
-                  <div class="coffee-price">$280~$600</div>
+                </div>
+                <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
+                <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
+                <div class="coffee-price">$280~$600</div>
                 </a>
               </div>
             </div>
