--- a/explore.html
+++ b/explore.html
@@ -10,8 +10,8 @@
     fetchpriority="high" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
-    <script type="module" crossorigin src="/coffee/assets/main-Dyx7bzRs.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CLrkU0aX.css">
+    <script type="module" crossorigin src="/coffee/assets/main-Bt3ics6B.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CtyBAd7E.css">
   </head>
 
 <body>
@@ -322,18 +322,19 @@
             </div>
             <!-- 右邊 -->
             <div class="col-12 col-md-5 x2">
-              <a href="productdetail.html"></a>
+
               <div class="rounded pb-20 coffeecard">
                 <div>
                   <div class="hearticon">
                     <i class="bi bi-heart cicon"></i>
                     <i class="bi bi-heart-fill cicon d-none"></i>
                   </div>
-                  <img class="coffee-img rounded" src="/images/explore/explore-coffee-1.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
+                  <img class="coffee-img rounded" src="/coffee/images/productsImg/blackCoffeeBean.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
                 </div>
-                <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
-                <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
-                <div class="coffee-price">$280~$600</div>
+                <a href="productdetail.html">
+                  <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
+                  <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
+                  <div class="coffee-price">$280~$600</div>
                 </a>
               </div>
             </div>
