--- a/pages/products.html
+++ b/pages/products.html
@@ -549,17 +549,17 @@
           <!-- Marco test -->
           <div class="col">
             <div class="rounded pb-20 coffeecard">
-              <div class="bg-primary-50">
+              <div class="bg-primary-50 mb-20">
                 <div class="hearticon">
-                  <i class="bi bi-heart bp cicon "></i>
-                  <i class="bi bi-heart-fill bp cicon d-none "></i>
+                  <i class="bi bi-heart psm cicon"></i>
+                  <i class="bi bi-heart-fill psm cicon d-none"></i>
                 </div>
                 <img class="coffee-img rounded" src="/images/productsImg/blackCoffeeBean.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
               </div>
               <a href="productdetail.html">
-                <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
-                <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
-                <div class="coffee-price">$280~$600</div>
+                <div class="coffee-type psm mb-8">經典咖啡豆 | 中度烘焙</div>
+                <div class="coffee-name psm mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
+                <div class="coffee-price psm">$280~$600</div>
               </a>
             </div>
           </div>
