--- a/products.html
+++ b/products.html
@@ -8,8 +8,8 @@
   <title></title>
    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
-    <script type="module" crossorigin src="/coffee/assets/main-Bt3ics6B.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CtyBAd7E.css">
+    <script type="module" crossorigin src="/coffee/assets/main-C8nIFjsP.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BwHPiMP3.css">
   </head>
 
 <body class="products-bg">
@@ -627,17 +627,17 @@
           <!-- Marco test -->
           <div class="col">
             <div class="rounded pb-20 coffeecard">
-              <div class="bg-primary-50">
+              <div class="bg-primary-50 mb-20">
                 <div class="hearticon">
-                  <i class="bi bi-heart bp cicon "></i>
-                  <i class="bi bi-heart-fill bp cicon d-none "></i>
+                  <i class="bi bi-heart psm cicon"></i>
+                  <i class="bi bi-heart-fill psm cicon d-none"></i>
                 </div>
                 <img class="coffee-img rounded" src="/coffee/images/productsImg/blackCoffeeBean.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
               </div>
               <a href="productdetail.html">
-                <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
-                <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
-                <div class="coffee-price">$280~$600</div>
+                <div class="coffee-type psm mb-8">經典咖啡豆 | 中度烘焙</div>
+                <div class="coffee-name psm mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
+                <div class="coffee-price psm">$280~$600</div>
               </a>
             </div>
           </div>
