真手機板愛心位置

--- a/pages/products.html
+++ b/pages/products.html
@@ -550,7 +550,7 @@
           <div class="col">
             <div class="rounded pb-20 coffeecard">
               <div class="bg-primary-50 mb-20">
-                <div class="hearticon">
+                <div class="hearticon psm">
                   <i class="bi bi-heart psm cicon"></i>
                   <i class="bi bi-heart-fill psm cicon d-none"></i>
                 </div>
