--- a/products.html
+++ b/products.html
@@ -8,8 +8,8 @@
   <title></title>
    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
-    <script type="module" crossorigin src="/coffee/assets/main-C8nIFjsP.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BwHPiMP3.css">
+    <script type="module" crossorigin src="/coffee/assets/main-17T8jyGD.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DtyZfhpQ.css">
   </head>
 
 <body class="products-bg">
@@ -628,7 +628,7 @@
           <div class="col">
             <div class="rounded pb-20 coffeecard">
               <div class="bg-primary-50 mb-20">
-                <div class="hearticon">
+                <div class="hearticon psm">
                   <i class="bi bi-heart psm cicon"></i>
                   <i class="bi bi-heart-fill psm cicon d-none"></i>
                 </div>
