註解掉卡片測試部分(目前card.scss是可以的)

--- a/pages/products.html
+++ b/pages/products.html
@@ -547,7 +547,7 @@
           </div>
 
           <!-- Marco test -->
-          <div class="col">
+          <!-- <div class="col">
             <div class="rounded pb-20 coffeecard">
               <div class="bg-primary-50 mb-20">
                 <div class="hearticon psm">
@@ -562,7 +562,7 @@
                 <div class="coffee-price psm">$280~$600</div>
               </a>
             </div>
-          </div>
+          </div> -->
           <!-- Marco test end -->
 
         </div>
