將bootstrap icon 加入all.scss

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -8,8 +8,7 @@
   <title></title>
   <link rel="preload" href="/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" crossorigin="anonymous"
     fetchpriority="high" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
-    rel="stylesheet">
+
   <%- include('./layout/style'); -%>
 </head>
 
@@ -250,8 +249,9 @@
                   <div class="hearticon">
                     <i class="bi bi-heart cicon"></i>
                     <i class="bi bi-heart-fill cicon d-none"></i>
-                  </div>
-                  <img class="coffee-img rounded" src="/images/productsImg/blackCoffeeBean.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
+                  </div> <a href="productdetail.html">
+                    <img class="coffee-img rounded" src="/images/productsImg/blackCoffeeBean.png"
+                      alt="祕魯 薇拉瑞卡 安迪亞斯莊園" /></a>
                 </div>
                 <a href="productdetail.html">
                   <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
