--- a/explore.html
+++ b/explore.html
@@ -8,10 +8,9 @@
   <title></title>
   <link rel="preload" href="/coffee/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" crossorigin="anonymous"
     fetchpriority="high" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
-    rel="stylesheet">
-    <script type="module" crossorigin src="/coffee/assets/main-AJFyL7VJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-vGISomwq.css">
+
+    <script type="module" crossorigin src="/coffee/assets/main-BeX-V8Lo.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-C95XhB0v.css">
   </head>
 
 <body>
@@ -315,8 +314,9 @@
                   <div class="hearticon">
                     <i class="bi bi-heart cicon"></i>
                     <i class="bi bi-heart-fill cicon d-none"></i>
-                  </div>
-                  <img class="coffee-img rounded" src="/coffee/images/productsImg/blackCoffeeBean.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
+                  </div> <a href="productdetail.html">
+                    <img class="coffee-img rounded" src="/coffee/images/productsImg/blackCoffeeBean.png"
+                      alt="祕魯 薇拉瑞卡 安迪亞斯莊園" /></a>
                 </div>
                 <a href="productdetail.html">
                   <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
