0918 back to up botton

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
+    </div><div id="top"></div>
     <%- include('./layout/header'); -%>
-
     <main class="">
       <!-- 關於羊蹄 -->
       <div class="about-1 ">
@@ -248,8 +248,9 @@
     </main>
 
     <%- include('./layout/footer'); -%>
-    <script type="module" src="../main.js"></script>
     <%- include('./layout/js'); -%>
     <%- include('./layout/jquery'); -%>
+    <%- include('./layout/btup'); -%>
+    <script type="module" src="../main.js"></script>
   </body>
 </html>
