--- a/pages/products.html
+++ b/pages/products.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="products-bg">
+  </div><div id="top"></div>
   <%- include('./layout/header'); -%>
 
   <!-- <div class="nav-test">
@@ -133,7 +134,7 @@
 
           <!-- whiteCoffeeCup -->
           <div class="col">
-            <a href="#" class="text-decoration-none products-link">
+            <a href="/coffee/pages/productdetail.html" class="text-decoration-none products-link">
               <div class="card">
   
                 <!-- 商品照與底色 -->
@@ -512,6 +513,7 @@
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
       <%- include('./layout/js'); -%>
+      <%- include('./layout/btup'); -%>
 </body>
 
 </html>
