--- a/pages/explore.html
+++ b/pages/explore.html
@@ -268,6 +268,7 @@
       <%- include('./layout/js'); -%>
 
         <%- include('./layout/jquery'); -%>
+        <%- include('./layout/btup'); -%>
 </body>
 
 </html>
