--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -289,6 +289,7 @@
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
       <%- include('./layout/js'); -%>
+      <%- include('./layout/btup'); -%>
 </body>
 
 </html>
