--- a/pages/about.html
+++ b/pages/about.html
@@ -8,8 +8,7 @@
     <%- include('./layout/style'); -%>
   </head>
 
-  <body>
-    </div><div id="top"></div>
+  <body id="top">
     <%- include('./layout/header'); -%>
     <main class="">
       <!-- 關於羊蹄 -->
