--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
   <%- include('./layout/style'); -%>
 </head>
 
-<body>
+<body id="top">
   <div class="scroll">
     <div class="index">
       <%- include('./layout/header'); -%>
@@ -55,7 +55,7 @@
       <div class="container moon">
         <div class="row d-flex align-items-end">
           <div class="vh-80 col-12 col-md-7 col-lg-4 d-flex flex-column justify-content-between">
-            <div class="top">
+            <div class="index-top">
               <p class="moon-title text-primary-950 mb-8 mb-md-12 mb-lg-20">中秋節</p>
               <p class="moon-title text-primary-950 mb-12 mb-md-32 mb-lg-48">限定濾掛禮盒</p>
               <div class="d-flex align-items-center mb-12 mb-md-0">
