--- a/pages/explore.html
+++ b/pages/explore.html
@@ -13,7 +13,7 @@
   <%- include('./layout/style'); -%>
 </head>
 
-<body>
+<body id="top">
   <%- include('./layout/header'); -%>
 
     <main class="explore">
