--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -9,7 +9,7 @@
   <%- include('./layout/style'); -%>
 </head>
 
-<body>
+<body id="top">
   <%- include('./layout/header'); -%>
     <main class="container">
       <section class="py-40">
