--- a/pages/about.html
+++ b/pages/about.html
@@ -247,6 +247,7 @@
     </main>
 
     <%- include('./layout/footer'); -%>
+    <%- include('./layout/btup'); -%>
     <%- include('./layout/js'); -%>
     <%- include('./layout/jquery'); -%>
 
