--- a/pages/explore.html
+++ b/pages/explore.html
@@ -266,6 +266,7 @@
       <!-- 茶會到了尾聲 end -->
     </main>
     <%- include('./layout/footer'); -%>
+    <%- include('./layout/btup'); -%>
       <script type="module" src="../main.js"></script>
 
       <%- include('./layout/js'); -%>
