--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <script type="module" crossorigin src="/coffee/assets/main-DjfjrQhZ.js"></script>
         <link rel="stylesheet" crossorigin href="/coffee/assets/main-DEvtbYpP.css">
       </head>
-
-  <body id="top">
-    <div class="scroll">
+  <div id="top"></div>
+  <body >
+    <div class="scroll" >
       <div class="index">
         <!-- Header：固定在最上方 -->
 <header class="bg-primary-800">
@@ -924,25 +924,32 @@
 
 
 </div> 
-
-<div class="container">
+    <div class="container">
   <a href="#top" class="up d-none d-md-block">
-    <img src="/coffee/images/icon/ic_fluent_chevron_up_24_regular.png" alt="">
+    <img
+      src="/coffee/images/icon/ic_fluent_chevron_up_24_regular.png"
+      alt="回到最上方" />
   </a>
 </div>
 
-
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const btn = document.querySelector('.up');
-    const scroller =
-      document.querySelector('.scroll') || // 你的自訂容器
-      document.scrollingElement || document.documentElement;
+  document.addEventListener("DOMContentLoaded", () => {
+    const btn = document.querySelector(".up");
+    if (!btn) return;
 
-    btn?.addEventListener('click', (e) => {
+    btn.addEventListener("click", (e) => {
       e.preventDefault();
-      const reduce = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-      scroller.scrollTo({ top: 0, behavior: reduce ? 'auto' : 'smooth' });
+      const reduce = window.matchMedia(
+        "(prefers-reduced-motion: reduce)"
+      ).matches;
+      const behavior = reduce ? "auto" : "smooth";
+
+      // 1) 視窗
+      window.scrollTo({ top: 0, behavior });
+
+      // 2) 自訂容器（如果存在就一起捲）
+      const scroller = document.querySelector(".scroll");
+      if (scroller) scroller.scrollTo({ top: 0, behavior });
     });
   });
 </script>
