--- a/pages/index.html
+++ b/pages/index.html
@@ -7,9 +7,9 @@
     <title></title>
     <%- include('./layout/style'); -%>
   </head>
-
-  <body id="top">
-    <div class="scroll">
+  <div id="top"></div>
+  <body >
+    <div class="scroll" >
       <div class="index">
         <%- include('./layout/header'); -%>
         <div
@@ -831,7 +831,8 @@
         </div>
       </div>
     </div>
-    <%- include('./layout/footer'); -%> <%- include('./layout/btup'); -%>
+    <%- include('./layout/footer'); -%> 
+    <%- include('./layout/btup'); -%>
     <script type="module" src="../main.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
