--- a/pages/products.html
+++ b/pages/products.html
@@ -621,6 +621,7 @@
 
     </main>
     <%- include('./layout/footer'); -%>
+    <%- include('./layout/btup'); -%>
       <script type="module" src="../main.js"></script>
       <%- include('./layout/js'); -%>
       
