--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -287,6 +287,7 @@
       </section>
     </main>
     <%- include('./layout/footer'); -%>
+    <%- include('./layout/btup'); -%>
       <script type="module" src="../main.js"></script>
       <%- include('./layout/js'); -%>
      
