--- a/products.html
+++ b/products.html
@@ -207,7 +207,7 @@
 
           <!-- whiteCoffeeCup -->
           <div class="col">
-            <a href="/coffee/pages/productdetail.html" class="text-decoration-none products-link">
+            <a href="productdetail.html" class="text-decoration-none products-link">
               <div class="card">
 
                 <!-- 商品照與底色 -->
