0920 products url productdetail

--- a/pages/products.html
+++ b/pages/products.html
@@ -142,7 +142,7 @@
 
           <!-- whiteCoffeeCup -->
           <div class="col">
-            <a href="/coffee/pages/productdetail.html" class="text-decoration-none products-link">
+            <a href="productdetail.html" class="text-decoration-none products-link">
               <div class="card">
 
                 <!-- 商品照與底色 -->
