--- a/pages/products.html
+++ b/pages/products.html
@@ -88,7 +88,7 @@
       </div>
     </div>
 
-    <main class="container">
+    <main class="container-xl">
       <!-- 商品NAV -->
       <div class="row flex-md-row flex-column products-nav mb-md-40">
 
@@ -616,11 +616,7 @@
     <%- include('./layout/footer'); -%>
       <script type="module" src="../main.js"></script>
       <%- include('./layout/js'); -%>
-<<<<<<< HEAD
-        
-=======
       <%- include('./layout/btup'); -%>
->>>>>>> hsun
 </body>
 
 </html>
