--- a/pages/products.html
+++ b/pages/products.html
@@ -221,10 +221,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
                 </div>
               </div>
             </a>
@@ -266,10 +266,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 南米納斯 法罕莊園
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
             </a>
@@ -311,10 +311,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">東雪藏梅 配方
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
                 </div>
               </div>
             </a>
@@ -356,10 +356,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 星河莊園
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
             </a>
@@ -402,7 +402,7 @@
 
                 <div class="card-body products-bg text-center py-20 px-0">
                   <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">哥倫比亞 萊姆柑橙
                   </p>
                   <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
                 </div>
@@ -447,7 +447,7 @@
 
                 <div class="card-body products-bg text-center py-20 px-0">
                   <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">印尼 蘇門答臘 純波旁種 曼特寧
                   </p>
                   <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
                 </div>
@@ -491,10 +491,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 西達摩 蕾羅莎處理廠
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
                 </div>
               </div>
             </a>
@@ -536,10 +536,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 谷吉 罕貝拉
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
             </a>
