--- a/pages/explore.html
+++ b/pages/explore.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link
+      rel="preload"
+      href="/fonts/ChenYuluoyan-2.0-Thin.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+      fetchpriority="high" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
-  <link rel="preload" href="/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" crossorigin="anonymous"
-    fetchpriority="high" />
+    <%- include('./layout/style'); -%>
+  </head>
 
-  <%- include('./layout/style'); -%>
-</head>
-
-<body id="top">
-  <%- include('./layout/header'); -%>
+  <body>
+    <%- include('./layout/header'); -%>
 
     <main class="explore">
       <!-- 找尋屬於我的咖啡風味 -->
       <section id="a">
         <div class="content bg1">
-          <h1 class="h1 mb-16 mb-md-24">
-            找尋屬於我的咖啡風味
-          </h1>
+          <h1 class="h1 mb-16 mb-md-24">找尋屬於我的咖啡風味</h1>
           <!-- https://getbootstrap.com/docs/5.3/utilities/display/ -->
           <!-- 手機顯示 -->
           <div class="d-block d-md-none">
@@ -31,7 +33,9 @@
           </div>
           <!-- 電腦顯示 -->
           <div class="d-none d-md-block">
-            <p class="mb-12">親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
+            <p class="mb-12">
+              親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會
+            </p>
             <p class="mb-40">我們將會帶領您探索屬於您的咖啡</p>
           </div>
           <div class="text-center">
@@ -53,21 +57,30 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c1">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-threeroad1.png" alt="帶有酸甜花果香味的道路" />
-                <p class=" p-8 p-md-12">帶有酸甜花果香味的道路</p>
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-threeroad1.png"
+                  alt="帶有酸甜花果香味的道路" />
+                <p class="p-8 p-md-12">帶有酸甜花果香味的道路</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c2">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-threeroad2.png" alt="溫和堅果巧克力味的道路" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-threeroad2.png"
+                  alt="溫和堅果巧克力味的道路" />
                 <p class="p-8 p-md-12">溫和堅果巧克力味的道路</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c3">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-threeroad3.png" alt="濃郁草本優雅香氣的道路" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-threeroad3.png"
+                  alt="濃郁草本優雅香氣的道路" />
                 <p class="p-8 p-md-12">濃郁草本優雅香氣的道路</p>
               </div>
             </div>
@@ -92,21 +105,30 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c4">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake1-1.png"
+                  alt="柑橘磅蛋糕" />
                 <p class="p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="d3">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-2.png" alt="法式芒果軟糖" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake1-2.png"
+                  alt="法式芒果軟糖" />
                 <p class="p-8 p-md-12">法式芒果軟糖</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="d4">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-3.png" alt="黑醋栗奶油蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake1-3.png"
+                  alt="黑醋栗奶油蛋糕" />
                 <p class="p-8 p-md-12">黑醋栗奶油蛋糕</p>
               </div>
             </div>
@@ -122,24 +144,27 @@
       <!--  接著享用時麼點心呢 -->
       <section id="c4" class="d-none">
         <div class="content bg4">
-          <h2 class="h2 mb-16 mb-md-40">
-            接著享用時麼點心呢?
-          </h2>
+          <h2 class="h2 mb-16 mb-md-40">接著享用時麼點心呢?</h2>
 
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d1">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake4-1.png" alt="白桃果凍" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake4-1.png"
+                  alt="白桃果凍" />
                 <p class="p-8 p-md-12">白桃果凍</p>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d2">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake4-2.png" alt="蜂蜜杯子蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake4-2.png"
+                  alt="蜂蜜杯子蛋糕" />
                 <p class="p-8 p-md-12">蜂蜜杯子蛋糕</p>
               </div>
             </div>
-
           </div>
 
           <div class="text-center text-md-start mt-md-24">
@@ -159,28 +184,40 @@
           <div class="row">
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d5">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake2-1.png" alt="李子核桃塔" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake2-1.png"
+                  alt="李子核桃塔" />
                 <p class="p-8 p-md-12">李子核桃塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d6">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake2-2.png" alt="萊姆夾心餅乾" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake2-2.png"
+                  alt="萊姆夾心餅乾" />
                 <p class="p-8 p-md-12">萊姆夾心餅乾</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d6">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake2-3.png" alt="櫻桃核果磅蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake2-3.png"
+                  alt="櫻桃核果磅蛋糕" />
                 <p class="p-8 p-md-12">櫻桃核果磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d8">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake1-1.png"
+                  alt="柑橘磅蛋糕" />
                 <p class="p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
@@ -203,14 +240,20 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d9">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake3-1.png" alt="黑糖榛果塔" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake3-1.png"
+                  alt="黑糖榛果塔" />
                 <p class="p-8 p-md-12">黑糖榛果塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d10">
-                <img class="rounded p-8 p-md-12" src="/images/explore/explore-cake3-2.png" alt="蜂蜜紅茶餅乾" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/images/explore/explore-cake3-2.png"
+                  alt="蜂蜜紅茶餅乾" />
                 <p class="p-8 p-md-12">蜂蜜紅茶餅乾</p>
               </div>
             </div>
@@ -233,7 +276,9 @@
             <div class="col-12 col-md-7">
               <p class="mb-4 mb-md-12">茶會到了尾聲，感謝您今日蒞臨羊蹄茶會</p>
               <p class="mb-16 mb-md-24">最後為您獻上最適合的咖啡風味</p>
-              <h2 class="coffee-name-br h3 mb-16 mb-md-24">祕魯 薇拉瑞卡<br>安迪亞斯莊園</h2>
+              <h2 class="coffee-name-br h3 mb-16 mb-md-24">
+                祕魯 薇拉瑞卡<br />安迪亞斯莊園
+              </h2>
               <div class="x1 mb-16 mb-md-0"></div>
               <p class="mb-md-40">歡迎您填寫線上預約至本店試喝~~</p>
               <div class="text-center">
@@ -243,15 +288,18 @@
             </div>
             <!-- 右邊 -->
             <div class="col-12 col-md-5 x2">
-
               <div class="rounded pb-20 coffeecard">
                 <div>
                   <div class="hearticon">
                     <i class="bi bi-heart cicon"></i>
                     <i class="bi bi-heart-fill cicon d-none"></i>
-                  </div> <a href="productdetail.html">
-                    <img class="coffee-img rounded" src="/images/productsImg/blackCoffeeBean.png"
-                      alt="祕魯 薇拉瑞卡 安迪亞斯莊園" /></a>
+                  </div>
+                  <a href="productdetail.html">
+                    <img
+                      class="coffee-img rounded"
+                      src="/images/productsImg/blackCoffeeBean.png"
+                      alt="祕魯 薇拉瑞卡 安迪亞斯莊園"
+                  /></a>
                 </div>
                 <a href="productdetail.html">
                   <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
@@ -266,17 +314,12 @@
       <!-- 茶會到了尾聲 end -->
     </main>
     <%- include('./layout/footer'); -%>
-    <%- include('./layout/btup'); -%>
-      <script type="module" src="../main.js"></script>
 
-      <%- include('./layout/js'); -%>
+    <script type="module" src="../main.js"></script>
 
-        <%- include('./layout/jquery'); -%>
-     
-</body>
-
+    <%- include('./layout/js'); -%> <%- include('./layout/jquery'); -%>
+  </body>
 </html>
-
 
 <!-- 手機顯示 -->
 <!-- <div class="d-block d-md-none">
