--- a/explore.html
+++ b/explore.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link
+      rel="preload"
+      href="/coffee/fonts/ChenYuluoyan-2.0-Thin.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+      fetchpriority="high" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
-  <link rel="preload" href="/coffee/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" crossorigin="anonymous"
-    fetchpriority="high" />
+        <script type="module" crossorigin src="/coffee/assets/main-up-M9gIW.js"></script>
+        <link rel="stylesheet" crossorigin href="/coffee/assets/main-CS4TpWDp.css">
+      </head>
 
-    <script type="module" crossorigin src="/coffee/assets/main-D1O5btC3.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DPVXiovn.css">
-  </head>
-
-<body id="top">
-  <!-- Header：固定在最上方 -->
+  <body>
+    <!-- Header：固定在最上方 -->
 <header class="bg-primary-800">
   <div class="container">
     <div class="row align-items-center" style="min-height: var(--header-h)">
@@ -84,9 +88,7 @@
       <!-- 找尋屬於我的咖啡風味 -->
       <section id="a">
         <div class="content bg1">
-          <h1 class="h1 mb-16 mb-md-24">
-            找尋屬於我的咖啡風味
-          </h1>
+          <h1 class="h1 mb-16 mb-md-24">找尋屬於我的咖啡風味</h1>
           <!-- https://getbootstrap.com/docs/5.3/utilities/display/ -->
           <!-- 手機顯示 -->
           <div class="d-block d-md-none">
@@ -96,7 +98,9 @@
           </div>
           <!-- 電腦顯示 -->
           <div class="d-none d-md-block">
-            <p class="mb-12">親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會</p>
+            <p class="mb-12">
+              親愛的貴賓，很榮幸邀請您一同參與我們舉辦的羊蹄茶會
+            </p>
             <p class="mb-40">我們將會帶領您探索屬於您的咖啡</p>
           </div>
           <div class="text-center">
@@ -118,21 +122,30 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c1">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad1.png" alt="帶有酸甜花果香味的道路" />
-                <p class=" p-8 p-md-12">帶有酸甜花果香味的道路</p>
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-threeroad1.png"
+                  alt="帶有酸甜花果香味的道路" />
+                <p class="p-8 p-md-12">帶有酸甜花果香味的道路</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c2">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad2.png" alt="溫和堅果巧克力味的道路" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-threeroad2.png"
+                  alt="溫和堅果巧克力味的道路" />
                 <p class="p-8 p-md-12">溫和堅果巧克力味的道路</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c3">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad3.png" alt="濃郁草本優雅香氣的道路" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-threeroad3.png"
+                  alt="濃郁草本優雅香氣的道路" />
                 <p class="p-8 p-md-12">濃郁草本優雅香氣的道路</p>
               </div>
             </div>
@@ -157,21 +170,30 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c4">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake1-1.png"
+                  alt="柑橘磅蛋糕" />
                 <p class="p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="d3">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake1-2.png" alt="法式芒果軟糖" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake1-2.png"
+                  alt="法式芒果軟糖" />
                 <p class="p-8 p-md-12">法式芒果軟糖</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="d4">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake1-3.png" alt="黑醋栗奶油蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake1-3.png"
+                  alt="黑醋栗奶油蛋糕" />
                 <p class="p-8 p-md-12">黑醋栗奶油蛋糕</p>
               </div>
             </div>
@@ -187,24 +209,27 @@
       <!--  接著享用時麼點心呢 -->
       <section id="c4" class="d-none">
         <div class="content bg4">
-          <h2 class="h2 mb-16 mb-md-40">
-            接著享用時麼點心呢?
-          </h2>
+          <h2 class="h2 mb-16 mb-md-40">接著享用時麼點心呢?</h2>
 
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d1">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake4-1.png" alt="白桃果凍" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake4-1.png"
+                  alt="白桃果凍" />
                 <p class="p-8 p-md-12">白桃果凍</p>
               </div>
             </div>
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d2">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake4-2.png" alt="蜂蜜杯子蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake4-2.png"
+                  alt="蜂蜜杯子蛋糕" />
                 <p class="p-8 p-md-12">蜂蜜杯子蛋糕</p>
               </div>
             </div>
-
           </div>
 
           <div class="text-center text-md-start mt-md-24">
@@ -224,28 +249,40 @@
           <div class="row">
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d5">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake2-1.png" alt="李子核桃塔" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake2-1.png"
+                  alt="李子核桃塔" />
                 <p class="p-8 p-md-12">李子核桃塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d6">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake2-2.png" alt="萊姆夾心餅乾" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake2-2.png"
+                  alt="萊姆夾心餅乾" />
                 <p class="p-8 p-md-12">萊姆夾心餅乾</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d6">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake2-3.png" alt="櫻桃核果磅蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake2-3.png"
+                  alt="櫻桃核果磅蛋糕" />
                 <p class="p-8 p-md-12">櫻桃核果磅蛋糕</p>
               </div>
             </div>
 
             <div class="col-12 col-md-3">
               <div class="choosecard rounded" data-go="d8">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake1-1.png" alt="柑橘磅蛋糕" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake1-1.png"
+                  alt="柑橘磅蛋糕" />
                 <p class="p-8 p-md-12">柑橘磅蛋糕</p>
               </div>
             </div>
@@ -268,14 +305,20 @@
           <div class="row">
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d9">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake3-1.png" alt="黑糖榛果塔" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake3-1.png"
+                  alt="黑糖榛果塔" />
                 <p class="p-8 p-md-12">黑糖榛果塔</p>
               </div>
             </div>
 
             <div class="col-12 col-md-6">
               <div class="choosecard rounded" data-go="d10">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-cake3-2.png" alt="蜂蜜紅茶餅乾" />
+                <img
+                  class="rounded p-8 p-md-12"
+                  src="/coffee/images/explore/explore-cake3-2.png"
+                  alt="蜂蜜紅茶餅乾" />
                 <p class="p-8 p-md-12">蜂蜜紅茶餅乾</p>
               </div>
             </div>
@@ -298,7 +341,9 @@
             <div class="col-12 col-md-7">
               <p class="mb-4 mb-md-12">茶會到了尾聲，感謝您今日蒞臨羊蹄茶會</p>
               <p class="mb-16 mb-md-24">最後為您獻上最適合的咖啡風味</p>
-              <h2 class="coffee-name-br h3 mb-16 mb-md-24">祕魯 薇拉瑞卡<br>安迪亞斯莊園</h2>
+              <h2 class="coffee-name-br h3 mb-16 mb-md-24">
+                祕魯 薇拉瑞卡<br />安迪亞斯莊園
+              </h2>
               <div class="x1 mb-16 mb-md-0"></div>
               <p class="mb-md-40">歡迎您填寫線上預約至本店試喝~~</p>
               <div class="text-center">
@@ -308,15 +353,18 @@
             </div>
             <!-- 右邊 -->
             <div class="col-12 col-md-5 x2">
-
               <div class="rounded pb-20 coffeecard">
                 <div>
                   <div class="hearticon">
                     <i class="bi bi-heart cicon"></i>
                     <i class="bi bi-heart-fill cicon d-none"></i>
-                  </div> <a href="productdetail.html">
-                    <img class="coffee-img rounded" src="/coffee/images/productsImg/blackCoffeeBean.png"
-                      alt="祕魯 薇拉瑞卡 安迪亞斯莊園" /></a>
+                  </div>
+                  <a href="productdetail.html">
+                    <img
+                      class="coffee-img rounded"
+                      src="/coffee/images/productsImg/blackCoffeeBean.png"
+                      alt="祕魯 薇拉瑞卡 安迪亞斯莊園"
+                  /></a>
                 </div>
                 <a href="productdetail.html">
                   <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
@@ -357,37 +405,9 @@
 
 
 
-</div>    <div class="container">
-  <a href="#top" class="up d-none d-md-block">
-    <img
-      src="/coffee/images/icon/ic_fluent_chevron_up_24_regular.png"
-      alt="回到最上方" />
-  </a>
 </div>
 
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const btn = document.querySelector(".up");
-    if (!btn) return;
-
-    btn.addEventListener("click", (e) => {
-      e.preventDefault();
-      const reduce = window.matchMedia(
-        "(prefers-reduced-motion: reduce)"
-      ).matches;
-      const behavior = reduce ? "auto" : "smooth";
-
-      // 1) 視窗
-      window.scrollTo({ top: 0, behavior });
-
-      // 2) 自訂容器（如果存在就一起捲）
-      const scroller = document.querySelector(".scroll");
-      if (scroller) scroller.scrollTo({ top: 0, behavior });
-    });
-  });
-</script>
-
-      <script>
+    <script>
     let pagetilte = "羊蹄咖啡";
     const url = window.location.pathname;
     const nowpage = url.split("/").pop();
@@ -416,8 +436,7 @@
     document.title = pagetilte;
 </script>
 
- 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 
     const data = [
@@ -575,11 +594,8 @@
 
         resize();
     });
-</script>     
-</body>
-
+</script>  </body>
 </html>
-
 
 <!-- 手機顯示 -->
 <!-- <div class="d-block d-md-none">
