--- a/products.html
+++ b/products.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
 
-    <script type="module" crossorigin src="/coffee/assets/main-D1O5btC3.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DPVXiovn.css">
+    <script type="module" crossorigin src="/coffee/assets/main-up-M9gIW.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CS4TpWDp.css">
   </head>
 
 <body class="products-bg" id="top">
@@ -153,7 +153,7 @@
       </div>
     </div>
 
-    <main class="container">
+    <main class="container-xl">
       <!-- 商品NAV -->
       <div class="row flex-md-row flex-column products-nav mb-md-40">
 
@@ -190,7 +190,7 @@
               id="search" placeholder="搜尋商品" aria-label="搜尋商品">
 
             <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-              class="position-absolute top-50 start-0 translate-middle-y mx-12">
+              class="position-absolute top-50 start-0 translate-middle-y ms-md-16 ms-12 me-12">
               <path
                 d="M10 2.5a7.5 7.5 0 0 1 5.964 12.048l4.743 4.745a1 1 0 0 1-1.32 1.497l-.094-.083-4.745-4.743A7.5 7.5 0 1 1 10 2.5Zm0 2a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11Z"
                 fill="#ADADAD" />
@@ -286,10 +286,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
                 </div>
               </div>
             </a>
@@ -331,10 +331,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 南米納斯 法罕莊園
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
             </a>
@@ -376,10 +376,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">東雪藏梅 配方
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
                 </div>
               </div>
             </a>
@@ -421,10 +421,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 星河莊園
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
             </a>
@@ -467,7 +467,7 @@
 
                 <div class="card-body products-bg text-center py-20 px-0">
                   <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">哥倫比亞 萊姆柑橙
                   </p>
                   <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
                 </div>
@@ -512,7 +512,7 @@
 
                 <div class="card-body products-bg text-center py-20 px-0">
                   <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">印尼 蘇門答臘 純波旁種 曼特寧
                   </p>
                   <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
                 </div>
@@ -556,10 +556,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 西達摩 蕾羅莎處理廠
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
                 </div>
               </div>
             </a>
@@ -601,10 +601,10 @@
                 </div>
 
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙</h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞 涅里區聯合處理廠
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙</h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 谷吉 罕貝拉
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
             </a>
@@ -740,7 +740,7 @@
       if (scroller) scroller.scrollTo({ top: 0, behavior });
     });
   });
-</script>
+</script>
       <script>
     let pagetilte = "羊蹄咖啡";
     const url = window.location.pathname;
